--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,10 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # FEEDBACK 4: Pin actions to full commit SHA (Security against supply-chain attacks)
-    # Using specific hashes for actions/checkout@v4 and actions/setup-python@v5
-    - uses: actions/setup-python@v4 # v4.2.2
-    
+    - uses: actions/checkout@v4
     - name: Set up Python 3.10
       uses: actions/setup-python@v5 # v5.1.0
       with:
@@ -28,8 +25,9 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install flake8 pytest ruff black mypy
+        if [ -f backend/requirements.txt ]; then pip install -r backend/requirements.txt; fi
+        if [ -f backend/requirements-dev.txt ]; then pip install -r backend/requirements-dev.txt; fi
 
     # FEEDBACK 2: Remove --exit-zero to enforce code quality
     # The build will now FAIL if there are syntax errors or complexity issues
@@ -39,3 +37,43 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero removed: this will now fail if complexity > 10 or lines > 127
         flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Lint with ruff
+      run: |
+        ruff check .
+
+    - name: Check formatting with black
+      run: |
+        black --check .
+
+    - name: Type check with mypy
+      run: |
+        mypy .
+
+    - name: Run tests
+      run: |
+        python -m pytest -q
+
+  frontend:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: "20"
+        cache: "npm"
+        cache-dependency-path: "frontend/package-lock.json"
+
+    - name: Install frontend dependencies
+      working-directory: frontend
+      run: npm ci
+
+    - name: Lint frontend
+      working-directory: frontend
+      run: npm run lint
+
+    - name: Build frontend
+      working-directory: frontend
+      run: npm run build
