--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest ruff black mypy
+        pip install flake8 pytest
         if [ -f backend/requirements.txt ]; then pip install -r backend/requirements.txt; fi
         if [ -f backend/requirements-dev.txt ]; then pip install -r backend/requirements-dev.txt; fi
 
@@ -35,20 +35,6 @@ jobs:
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero removed: this will now fail if complexity > 10 or lines > 127
-        flake8 . --count --max-complexity=10 --max-line-length=127 --statistics
-
-    - name: Lint with ruff
-      run: |
-        ruff check .
-
-    - name: Check formatting with black
-      run: |
-        black --check .
-
-    - name: Type check with mypy
-      run: |
-        mypy .
 
     - name: Run tests
       run: |
