--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,6 +9,8 @@
         "skipLibCheck": true,
         "strict": true,
         "noEmit": true,
+        "target": "es2015",
+        "downlevelIteration": true,
         "esModuleInterop": true,
         "module": "esnext",
         "moduleResolution": "bundler",
